--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -45,6 +45,6 @@
     <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
     </main>
-    {{ block "footer" . }}{{ partialCached "site-footer.html" . }}{{ end }}
+    <!-- {{ block "footer" . }}{{ partialCached "site-footer.html" .  }}{{ end }} -->
   </body>
 </html>
